[gd_scene load_steps=22 format=2]

[ext_resource path="res://sprites/Redi/lupão.png" type="Texture" id=1]
[ext_resource path="res://sprites/Redi/mosca.png" type="Texture" id=2]
[ext_resource path="res://sprites/Redi/frascão aberto.png" type="Texture" id=3]
[ext_resource path="res://sprites/Redi/frascão rolha.png" type="Texture" id=4]
[ext_resource path="res://sprites/Redi/frascão base.png" type="Texture" id=5]
[ext_resource path="res://sprites/Redi/frascão gaze.png" type="Texture" id=6]
[ext_resource path="res://scripts/Observando Redi.gd" type="Script" id=7]
[ext_resource path="res://fontes-e-temas/renascença.tres" type="Theme" id=8]
[ext_resource path="res://fontes-e-temas/fonteArvo32.tres" type="DynamicFont" id=9]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -146, -112.5, 0, 292, 225, 0 ),
"array_data": PoolByteArray( 0, 0, 18, 67, 0, 0, 165, 66, 0, 0, 128, 63, 222, 221, 93, 63, 204, 204, 10, 67, 0, 0, 179, 66, 11, 176, 121, 63, 196, 212, 101, 63, 0, 128, 8, 67, 0, 0, 179, 66, 214, 171, 119, 63, 196, 212, 101, 63, 0, 0, 237, 66, 0, 0, 199, 66, 242, 227, 103, 63, 122, 53, 113, 63, 152, 153, 230, 66, 0, 0, 199, 66, 189, 21, 101, 63, 122, 53, 113, 63, 154, 153, 150, 66, 0, 0, 223, 66, 53, 4, 66, 63, 187, 220, 126, 63, 204, 204, 136, 66, 0, 0, 223, 66, 149, 247, 59, 63, 187, 220, 126, 63, 204, 204, 126, 66, 0, 0, 225, 66, 185, 216, 55, 63, 0, 0, 128, 63, 102, 102, 104, 194, 0, 0, 225, 66, 68, 32, 154, 62, 0, 0, 128, 63, 0, 0, 202, 194, 102, 102, 210, 66, 231, 206, 29, 62, 184, 177, 119, 63, 0, 0, 202, 194, 204, 204, 207, 66, 231, 206, 29, 62, 17, 55, 118, 63, 0, 0, 10, 195, 154, 153, 177, 66, 56, 112, 224, 60, 224, 8, 101, 63, 0, 0, 10, 195, 204, 204, 174, 66, 56, 112, 224, 60, 24, 113, 99, 63, 0, 0, 18, 195, 154, 153, 160, 66, 0, 0, 0, 0, 18, 93, 91, 63, 0, 0, 18, 195, 0, 0, 82, 66, 0, 0, 0, 0, 188, 187, 59, 63, 0, 0, 18, 195, 0, 0, 225, 194, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 18, 67, 0, 0, 225, 194, 0, 0, 128, 63, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 16, 0, 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 4, 0, 5, 0, 6, 0, 6, 0, 7, 0, 8, 0, 8, 0, 9, 0, 10, 0, 10, 0, 11, 0, 12, 0, 12, 0, 13, 0, 14, 0, 14, 0, 15, 0, 16, 0, 16, 0, 1, 0, 2, 0, 2, 0, 4, 0, 6, 0, 6, 0, 8, 0, 10, 0, 10, 0, 12, 0, 14, 0, 14, 0, 16, 0, 2, 0, 2, 0, 6, 0, 10, 0, 10, 0, 14, 0, 2, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 45,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 17
}

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -146, -67.6, 0, 292, 148.1, 0 ),
"array_data": PoolByteArray( 0, 0, 148, 66, 154, 153, 125, 194, 112, 224, 64, 63, 64, 133, 217, 61, 0, 0, 148, 66, 205, 204, 120, 194, 112, 224, 64, 63, 251, 200, 232, 61, 0, 0, 220, 66, 205, 204, 96, 194, 56, 112, 96, 63, 213, 141, 26, 62, 0, 0, 220, 66, 51, 51, 91, 194, 56, 112, 96, 63, 89, 117, 35, 62, 0, 0, 8, 67, 51, 51, 47, 194, 158, 59, 119, 63, 207, 107, 105, 62, 0, 0, 8, 67, 102, 102, 40, 194, 158, 59, 119, 63, 202, 59, 116, 62, 102, 102, 15, 67, 0, 0, 228, 193, 117, 184, 125, 63, 208, 93, 165, 62, 0, 128, 12, 67, 0, 0, 228, 193, 151, 45, 123, 63, 208, 93, 165, 62, 0, 128, 10, 67, 0, 0, 172, 193, 182, 108, 121, 63, 153, 160, 187, 62, 52, 179, 8, 67, 0, 0, 172, 193, 186, 216, 119, 63, 153, 160, 187, 62, 0, 0, 250, 66, 152, 153, 57, 193, 203, 150, 109, 63, 78, 28, 219, 62, 0, 0, 250, 66, 0, 0, 8, 193, 203, 150, 109, 63, 13, 248, 228, 62, 204, 76, 2, 67, 0, 0, 32, 64, 81, 60, 114, 63, 164, 249, 3, 63, 0, 0, 3, 67, 0, 0, 32, 64, 109, 217, 114, 63, 164, 249, 3, 63, 0, 0, 18, 67, 0, 0, 172, 65, 0, 0, 128, 63, 180, 47, 34, 63, 0, 0, 18, 67, 0, 0, 161, 66, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 18, 195, 0, 0, 161, 66, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 17, 195, 0, 0, 172, 65, 56, 112, 96, 59, 180, 47, 34, 63, 154, 25, 15, 195, 0, 0, 172, 65, 195, 183, 34, 60, 180, 47, 34, 63, 0, 0, 246, 194, 48, 51, 3, 193, 168, 80, 161, 61, 73, 236, 229, 62, 0, 0, 246, 194, 0, 0, 56, 193, 168, 80, 161, 61, 183, 109, 219, 62, 0, 0, 10, 195, 0, 0, 188, 193, 56, 112, 224, 60, 95, 68, 181, 62, 0, 0, 10, 195, 0, 0, 216, 193, 56, 112, 224, 60, 251, 34, 170, 62, 0, 0, 13, 195, 0, 0, 10, 194, 35, 70, 140, 60, 37, 73, 146, 62, 0, 128, 10, 195, 0, 0, 10, 194, 53, 105, 210, 60, 37, 73, 146, 62, 0, 128, 8, 195, 0, 0, 38, 194, 161, 66, 5, 61, 184, 12, 120, 62, 154, 153, 6, 195, 0, 0, 38, 194, 142, 233, 31, 61, 184, 12, 120, 62, 51, 51, 241, 194, 0, 0, 78, 194, 224, 37, 178, 61, 124, 114, 56, 62, 205, 204, 234, 194, 0, 0, 78, 194, 127, 151, 200, 61, 124, 114, 56, 62, 205, 204, 196, 194, 0, 0, 106, 194, 16, 237, 38, 62, 235, 236, 11, 62, 154, 153, 186, 194, 0, 0, 106, 194, 155, 207, 56, 62, 235, 236, 11, 62, 204, 204, 80, 194, 0, 0, 131, 194, 163, 120, 164, 62, 181, 206, 190, 61, 102, 102, 24, 194, 0, 0, 131, 194, 204, 49, 189, 62, 181, 206, 190, 61, 0, 0, 176, 193, 205, 204, 132, 194, 182, 108, 217, 62, 232, 91, 179, 61, 0, 0, 176, 193, 51, 51, 135, 194, 182, 108, 217, 62, 43, 24, 164, 61 ),
"array_index_data": PoolByteArray( 34, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 7, 0, 7, 0, 8, 0, 9, 0, 12, 0, 13, 0, 14, 0, 14, 0, 15, 0, 16, 0, 16, 0, 17, 0, 18, 0, 20, 0, 21, 0, 22, 0, 22, 0, 23, 0, 24, 0, 24, 0, 25, 0, 26, 0, 26, 0, 27, 0, 28, 0, 28, 0, 29, 0, 30, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 1, 0, 1, 0, 3, 0, 5, 0, 5, 0, 7, 0, 9, 0, 12, 0, 14, 0, 16, 0, 16, 0, 18, 0, 19, 0, 20, 0, 22, 0, 24, 0, 24, 0, 26, 0, 28, 0, 28, 0, 30, 0, 32, 0, 32, 0, 33, 0, 1, 0, 1, 0, 5, 0, 9, 0, 11, 0, 12, 0, 16, 0, 20, 0, 24, 0, 28, 0, 28, 0, 32, 0, 1, 0, 1, 0, 9, 0, 10, 0, 10, 0, 11, 0, 16, 0, 19, 0, 20, 0, 28, 0, 28, 0, 1, 0, 10, 0, 10, 0, 16, 0, 19, 0, 19, 0, 28, 0, 10, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 99,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 35
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -146, -72.6, 0, 292, 153.1, 0 ),
"array_data": PoolByteArray( 0, 0, 136, 66, 205, 204, 138, 194, 207, 157, 59, 63, 145, 50, 141, 61, 0, 0, 136, 66, 154, 153, 136, 194, 207, 157, 59, 63, 168, 48, 155, 61, 0, 0, 212, 66, 51, 51, 125, 194, 119, 238, 92, 63, 229, 202, 218, 61, 0, 0, 212, 66, 51, 51, 119, 194, 119, 238, 92, 63, 145, 223, 237, 61, 0, 0, 9, 67, 51, 51, 63, 194, 14, 28, 120, 63, 234, 250, 79, 62, 0, 0, 9, 67, 51, 51, 57, 194, 14, 28, 120, 63, 64, 133, 89, 62, 0, 0, 17, 67, 51, 51, 25, 194, 144, 31, 127, 63, 133, 51, 134, 62, 0, 0, 17, 67, 0, 0, 196, 193, 144, 31, 127, 63, 67, 22, 178, 62, 102, 230, 14, 67, 0, 0, 196, 193, 61, 72, 125, 63, 67, 22, 178, 62, 0, 0, 4, 67, 208, 204, 60, 193, 221, 185, 115, 63, 122, 121, 218, 62, 0, 0, 4, 67, 160, 153, 89, 192, 221, 185, 115, 63, 5, 48, 245, 62, 0, 0, 18, 67, 104, 102, 70, 65, 0, 0, 128, 63, 126, 183, 19, 63, 0, 0, 18, 67, 0, 0, 161, 66, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 18, 195, 0, 0, 161, 66, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 17, 195, 0, 0, 236, 65, 56, 112, 96, 59, 38, 232, 46, 63, 0, 0, 18, 195, 0, 0, 236, 65, 0, 0, 0, 0, 38, 232, 46, 63, 0, 0, 18, 195, 0, 0, 72, 65, 0, 0, 0, 0, 51, 224, 19, 63, 0, 0, 3, 195, 0, 205, 204, 190, 53, 105, 82, 61, 91, 186, 254, 62, 0, 0, 3, 195, 0, 0, 40, 193, 53, 105, 82, 61, 211, 155, 222, 62, 0, 0, 16, 195, 102, 102, 214, 193, 56, 112, 224, 59, 206, 197, 170, 62, 0, 0, 16, 195, 102, 102, 16, 194, 56, 112, 224, 59, 145, 50, 141, 62, 154, 25, 12, 195, 0, 0, 42, 194, 246, 133, 165, 60, 127, 176, 113, 62, 51, 179, 10, 195, 0, 0, 42, 194, 205, 204, 204, 60, 127, 176, 113, 62, 205, 204, 0, 195, 0, 0, 78, 194, 112, 69, 113, 61, 124, 114, 56, 62, 154, 153, 252, 194, 0, 0, 78, 194, 124, 43, 138, 61, 124, 114, 56, 62, 205, 204, 200, 194, 0, 0, 122, 194, 142, 233, 31, 62, 13, 248, 228, 61, 205, 204, 190, 194, 0, 0, 122, 194, 82, 114, 49, 62, 13, 248, 228, 61, 102, 102, 128, 194, 0, 0, 139, 194, 30, 110, 143, 62, 235, 236, 139, 61, 102, 102, 88, 194, 0, 0, 139, 194, 197, 35, 161, 62, 235, 236, 139, 61, 0, 0, 224, 193, 205, 204, 142, 194, 116, 231, 206, 62, 87, 131, 103, 61, 0, 0, 224, 193, 51, 51, 145, 194, 116, 231, 206, 62, 222, 251, 72, 61 ),
"array_index_data": PoolByteArray( 30, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 7, 0, 10, 0, 11, 0, 12, 0, 12, 0, 13, 0, 14, 0, 14, 0, 15, 0, 16, 0, 18, 0, 19, 0, 20, 0, 20, 0, 21, 0, 22, 0, 22, 0, 23, 0, 24, 0, 24, 0, 25, 0, 26, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 1, 0, 1, 0, 3, 0, 5, 0, 5, 0, 7, 0, 8, 0, 10, 0, 12, 0, 14, 0, 14, 0, 16, 0, 17, 0, 18, 0, 20, 0, 22, 0, 22, 0, 24, 0, 26, 0, 26, 0, 28, 0, 29, 0, 29, 0, 1, 0, 5, 0, 5, 0, 8, 0, 9, 0, 9, 0, 10, 0, 14, 0, 18, 0, 22, 0, 26, 0, 26, 0, 29, 0, 5, 0, 5, 0, 9, 0, 14, 0, 17, 0, 18, 0, 26, 0, 26, 0, 5, 0, 14, 0, 14, 0, 17, 0, 26, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 87,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 31
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -146, -80.5, 0, 292, 161, 0 ),
"array_data": PoolByteArray( 0, 0, 208, 66, 154, 153, 154, 194, 151, 45, 91, 63, 134, 210, 162, 60, 0, 0, 208, 66, 205, 204, 151, 194, 151, 45, 91, 63, 161, 14, 234, 60, 0, 0, 240, 66, 205, 204, 139, 194, 154, 52, 105, 63, 87, 214, 134, 61, 0, 0, 240, 66, 154, 153, 136, 194, 154, 52, 105, 63, 168, 48, 155, 61, 0, 0, 254, 66, 51, 51, 117, 194, 172, 87, 111, 63, 202, 59, 244, 61, 0, 0, 254, 66, 51, 51, 77, 194, 172, 87, 111, 63, 33, 184, 57, 62, 0, 0, 253, 66, 0, 0, 70, 194, 116, 231, 110, 63, 239, 42, 69, 62, 0, 0, 10, 67, 0, 0, 38, 194, 126, 252, 120, 63, 184, 12, 120, 62, 0, 0, 10, 67, 102, 102, 28, 194, 126, 252, 120, 63, 59, 168, 131, 62, 0, 0, 14, 67, 102, 102, 4, 194, 63, 126, 124, 63, 231, 188, 150, 62, 0, 0, 14, 67, 204, 204, 240, 193, 63, 126, 124, 63, 60, 71, 160, 62, 204, 76, 10, 67, 0, 0, 172, 193, 210, 63, 121, 63, 153, 160, 187, 62, 52, 179, 8, 67, 0, 0, 172, 193, 186, 216, 119, 63, 153, 160, 187, 62, 0, 0, 250, 66, 152, 153, 57, 193, 203, 150, 109, 63, 78, 28, 219, 62, 0, 0, 250, 66, 0, 0, 40, 193, 203, 150, 109, 63, 211, 155, 222, 62, 0, 128, 0, 67, 0, 0, 0, 191, 84, 168, 112, 63, 242, 104, 254, 62, 0, 0, 18, 67, 0, 0, 172, 65, 0, 0, 128, 63, 180, 47, 34, 63, 0, 0, 18, 67, 0, 0, 161, 66, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 18, 195, 0, 0, 161, 66, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 17, 195, 0, 0, 172, 65, 56, 112, 96, 59, 180, 47, 34, 63, 51, 179, 15, 195, 0, 0, 172, 65, 83, 13, 1, 60, 180, 47, 34, 63, 154, 153, 14, 195, 0, 0, 132, 65, 202, 197, 62, 60, 108, 60, 26, 63, 102, 230, 12, 195, 0, 0, 132, 65, 87, 20, 143, 60, 108, 60, 26, 63, 0, 0, 254, 194, 0, 205, 76, 63, 161, 66, 133, 61, 165, 69, 1, 63, 0, 0, 254, 194, 0, 0, 128, 191, 161, 66, 133, 61, 227, 209, 252, 62, 0, 0, 246, 194, 0, 0, 16, 193, 168, 80, 161, 61, 254, 96, 227, 62, 0, 0, 246, 194, 152, 153, 41, 193, 168, 80, 161, 61, 107, 74, 222, 62, 0, 0, 10, 195, 204, 204, 188, 193, 56, 112, 224, 60, 246, 242, 180, 62, 0, 0, 10, 195, 0, 0, 220, 193, 56, 112, 224, 60, 237, 139, 168, 62, 205, 76, 11, 195, 0, 0, 22, 194, 149, 247, 187, 60, 207, 190, 136, 62, 154, 25, 9, 195, 0, 0, 22, 194, 11, 176, 249, 60, 207, 190, 136, 62, 51, 51, 5, 195, 0, 0, 50, 194, 250, 140, 51, 61, 13, 248, 100, 62, 51, 179, 2, 195, 0, 0, 50, 194, 131, 158, 86, 61, 13, 248, 100, 62, 0, 0, 248, 194, 0, 0, 70, 194, 39, 77, 154, 61, 239, 42, 69, 62, 0, 0, 248, 194, 0, 0, 86, 194, 39, 77, 154, 61, 10, 186, 43, 62, 102, 102, 250, 194, 0, 0, 131, 194, 139, 226, 145, 61, 181, 206, 190, 61, 0, 0, 246, 194, 0, 0, 131, 194, 168, 80, 161, 61, 181, 206, 190, 61, 0, 0, 236, 194, 0, 0, 145, 194, 49, 98, 196, 61, 40, 135, 75, 61, 0, 0, 231, 194, 0, 0, 145, 194, 245, 234, 213, 61, 40, 135, 75, 61, 0, 0, 203, 194, 0, 0, 159, 194, 7, 14, 28, 62, 40, 135, 203, 59, 102, 102, 184, 194, 0, 0, 159, 194, 34, 171, 60, 62, 40, 135, 203, 59, 102, 102, 166, 194, 0, 0, 161, 194, 234, 58, 92, 62, 0, 0, 0, 0, 204, 204, 148, 66, 0, 0, 161, 194, 54, 58, 65, 63, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 42, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 8, 0, 9, 0, 10, 0, 10, 0, 11, 0, 12, 0, 15, 0, 16, 0, 17, 0, 17, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 28, 0, 29, 0, 30, 0, 30, 0, 31, 0, 32, 0, 34, 0, 35, 0, 36, 0, 36, 0, 37, 0, 38, 0, 38, 0, 39, 0, 40, 0, 40, 0, 41, 0, 42, 0, 42, 0, 1, 0, 3, 0, 3, 0, 5, 0, 6, 0, 6, 0, 8, 0, 10, 0, 10, 0, 12, 0, 13, 0, 14, 0, 15, 0, 17, 0, 17, 0, 19, 0, 20, 0, 20, 0, 22, 0, 23, 0, 26, 0, 28, 0, 30, 0, 30, 0, 32, 0, 33, 0, 33, 0, 34, 0, 36, 0, 36, 0, 38, 0, 40, 0, 40, 0, 42, 0, 3, 0, 6, 0, 10, 0, 13, 0, 14, 0, 17, 0, 20, 0, 26, 0, 30, 0, 33, 0, 33, 0, 36, 0, 40, 0, 40, 0, 3, 0, 6, 0, 13, 0, 14, 0, 20, 0, 26, 0, 33, 0, 40, 0, 40, 0, 6, 0, 13, 0, 13, 0, 20, 0, 23, 0, 25, 0, 26, 0, 40, 0, 40, 0, 13, 0, 23, 0, 23, 0, 25, 0, 40, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 123,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 43
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 103.976, 66.2592 )

[sub_resource type="ArrayMesh" id=12]
surfaces/0 = {
"aabb": AABB( -169, -291, 0, 338, 582, 0 ),
"array_data": PoolByteArray( 0, 0, 72, 66, 154, 89, 144, 195, 173, 222, 37, 63, 219, 126, 129, 59, 0, 0, 72, 66, 51, 179, 143, 195, 173, 222, 37, 63, 76, 176, 202, 59, 0, 0, 172, 66, 51, 179, 136, 195, 215, 34, 65, 63, 8, 187, 247, 60, 0, 0, 172, 66, 205, 12, 136, 195, 215, 34, 65, 63, 178, 3, 5, 61, 0, 0, 224, 66, 154, 25, 127, 195, 18, 212, 84, 63, 53, 168, 124, 61, 0, 0, 224, 66, 205, 204, 125, 195, 18, 212, 84, 63, 49, 231, 130, 61, 0, 0, 13, 67, 205, 204, 95, 195, 251, 202, 106, 63, 88, 120, 236, 61, 0, 0, 13, 67, 51, 179, 93, 195, 251, 202, 106, 63, 28, 220, 243, 61, 0, 0, 24, 67, 51, 179, 78, 195, 208, 31, 115, 63, 88, 82, 20, 62, 0, 0, 24, 67, 0, 128, 76, 195, 208, 31, 115, 63, 68, 49, 24, 62, 0, 0, 35, 67, 0, 128, 54, 195, 164, 116, 123, 63, 125, 230, 62, 62, 0, 0, 35, 67, 205, 76, 51, 195, 164, 116, 123, 63, 212, 135, 68, 62, 0, 0, 41, 67, 0, 0, 31, 195, 0, 0, 128, 63, 87, 63, 104, 62, 0, 0, 41, 67, 204, 204, 176, 194, 0, 0, 128, 63, 121, 59, 178, 62, 154, 153, 34, 67, 0, 0, 116, 194, 21, 39, 123, 63, 55, 86, 202, 62, 204, 76, 33, 67, 0, 0, 116, 194, 5, 43, 122, 63, 55, 86, 202, 62, 204, 76, 23, 67, 0, 0, 20, 194, 21, 152, 114, 63, 62, 115, 223, 62, 154, 25, 22, 67, 0, 0, 20, 194, 106, 175, 113, 63, 62, 115, 223, 62, 154, 25, 5, 67, 0, 0, 48, 193, 58, 207, 100, 63, 178, 82, 246, 62, 204, 204, 3, 67, 0, 0, 48, 193, 41, 211, 99, 63, 178, 82, 246, 62, 204, 204, 221, 66, 0, 0, 48, 65, 201, 254, 83, 63, 167, 214, 4, 63, 104, 102, 217, 66, 0, 0, 48, 65, 58, 84, 82, 63, 167, 214, 4, 63, 104, 102, 189, 66, 0, 0, 184, 65, 183, 185, 71, 63, 233, 29, 10, 63, 0, 0, 185, 66, 0, 0, 184, 65, 38, 15, 70, 63, 233, 29, 10, 63, 0, 0, 137, 66, 0, 0, 20, 66, 180, 225, 51, 63, 97, 70, 16, 63, 154, 153, 130, 66, 0, 0, 20, 66, 63, 117, 49, 63, 97, 70, 16, 63, 0, 0, 248, 65, 0, 0, 62, 66, 179, 122, 23, 63, 187, 228, 20, 63, 0, 0, 248, 65, 104, 102, 80, 66, 179, 122, 23, 63, 182, 234, 22, 63, 152, 153, 241, 65, 0, 0, 116, 66, 149, 223, 22, 63, 229, 212, 26, 63, 0, 0, 18, 66, 0, 0, 172, 66, 29, 165, 27, 63, 4, 212, 37, 63, 0, 0, 10, 66, 0, 0, 172, 66, 83, 33, 26, 63, 4, 212, 37, 63, 0, 0, 252, 65, 0, 0, 196, 66, 165, 219, 23, 63, 69, 27, 43, 63, 0, 0, 28, 66, 204, 204, 2, 67, 217, 137, 29, 63, 181, 136, 57, 63, 0, 0, 28, 66, 0, 0, 10, 67, 217, 137, 29, 63, 119, 179, 60, 63, 0, 0, 44, 66, 102, 230, 42, 67, 108, 145, 32, 63, 41, 44, 75, 63, 0, 0, 44, 66, 154, 25, 50, 67, 108, 145, 32, 63, 235, 86, 78, 63, 52, 51, 15, 66, 0, 0, 127, 67, 99, 29, 27, 63, 58, 42, 112, 63, 0, 0, 10, 66, 0, 0, 127, 67, 83, 33, 26, 63, 58, 42, 112, 63, 0, 0, 220, 65, 0, 0, 139, 67, 18, 212, 20, 63, 35, 72, 122, 63, 48, 51, 207, 65, 0, 0, 139, 67, 215, 157, 19, 63, 35, 72, 122, 63, 160, 153, 105, 65, 0, 128, 145, 67, 217, 14, 11, 63, 0, 0, 128, 63, 96, 102, 118, 193, 0, 128, 145, 67, 21, 172, 232, 62, 0, 0, 128, 63, 0, 0, 144, 193, 0, 128, 144, 67, 214, 187, 228, 62, 202, 30, 127, 63, 0, 0, 144, 193, 102, 230, 143, 67, 214, 187, 228, 62, 170, 151, 126, 63, 0, 0, 224, 193, 102, 102, 138, 67, 247, 149, 213, 62, 3, 193, 121, 63, 0, 0, 224, 193, 0, 64, 137, 67, 247, 149, 213, 62, 5, 190, 120, 63, 0, 0, 8, 194, 0, 64, 131, 67, 62, 127, 204, 62, 195, 118, 115, 63, 0, 0, 8, 194, 0, 0, 129, 67, 62, 127, 204, 62, 11, 124, 113, 63, 0, 0, 40, 194, 154, 25, 72, 67, 242, 96, 192, 62, 57, 4, 88, 63, 0, 0, 40, 194, 0, 0, 50, 67, 242, 96, 192, 62, 168, 75, 78, 63, 0, 0, 32, 194, 0, 0, 8, 67, 133, 104, 195, 62, 65, 210, 59, 63, 204, 204, 26, 194, 0, 0, 8, 67, 165, 96, 197, 62, 65, 210, 59, 63, 0, 0, 248, 193, 52, 51, 199, 66, 155, 10, 209, 62, 113, 207, 43, 63, 0, 0, 248, 193, 204, 204, 190, 66, 155, 10, 209, 62, 128, 246, 41, 63, 52, 51, 19, 194, 0, 0, 158, 66, 112, 65, 200, 62, 200, 191, 34, 63, 0, 0, 10, 194, 0, 0, 158, 66, 89, 189, 203, 62, 200, 191, 34, 63, 0, 0, 240, 193, 0, 0, 124, 66, 100, 142, 210, 62, 26, 182, 27, 63, 0, 0, 240, 193, 48, 51, 81, 66, 100, 142, 210, 62, 59, 1, 23, 63, 152, 153, 245, 193, 152, 153, 63, 66, 241, 126, 209, 62, 197, 17, 21, 63, 0, 0, 120, 194, 0, 0, 30, 66, 53, 21, 162, 62, 228, 95, 17, 63, 0, 0, 120, 194, 48, 51, 25, 66, 53, 21, 162, 62, 195, 216, 16, 63, 0, 0, 172, 194, 96, 102, 226, 65, 164, 116, 123, 62, 183, 114, 12, 63, 0, 0, 172, 194, 208, 204, 216, 65, 164, 116, 123, 62, 151, 235, 11, 63, 0, 0, 224, 194, 160, 153, 33, 65, 183, 175, 44, 62, 79, 113, 4, 63, 0, 0, 224, 194, 192, 204, 12, 65, 183, 175, 44, 62, 236, 222, 3, 63, 0, 0, 6, 195, 160, 153, 65, 193, 45, 18, 212, 61, 246, 90, 245, 62, 0, 0, 6, 195, 64, 51, 99, 193, 45, 18, 212, 61, 5, 130, 243, 62, 0, 0, 16, 195, 160, 153, 201, 193, 179, 122, 151, 61, 183, 212, 233, 62, 0, 0, 16, 195, 0, 0, 228, 193, 179, 122, 151, 61, 135, 237, 230, 62, 0, 0, 32, 195, 0, 0, 94, 194, 83, 33, 218, 60, 222, 44, 207, 62, 0, 0, 32, 195, 204, 204, 106, 194, 83, 33, 218, 60, 50, 92, 204, 62, 0, 0, 41, 195, 102, 102, 176, 194, 0, 0, 0, 0, 131, 104, 178, 62, 0, 0, 41, 195, 205, 76, 29, 195, 0, 0, 0, 0, 13, 61, 107, 62, 0, 128, 30, 195, 0, 0, 66, 195, 55, 124, 254, 60, 171, 170, 42, 62, 205, 76, 29, 195, 0, 0, 66, 195, 220, 200, 13, 61, 171, 170, 42, 62, 205, 76, 20, 195, 0, 0, 85, 195, 135, 217, 122, 61, 179, 60, 9, 62, 154, 25, 19, 195, 0, 0, 85, 195, 36, 178, 132, 61, 179, 60, 9, 62, 154, 25, 5, 195, 0, 0, 106, 195, 55, 134, 217, 61, 203, 147, 200, 61, 205, 204, 3, 195, 0, 0, 106, 195, 180, 102, 225, 61, 203, 147, 200, 61, 205, 204, 221, 194, 0, 0, 128, 195, 217, 4, 48, 62, 178, 82, 118, 61, 102, 102, 217, 194, 0, 0, 128, 195, 28, 175, 54, 62, 178, 82, 118, 61, 102, 102, 169, 194, 0, 0, 137, 195, 227, 100, 127, 62, 4, 73, 239, 60, 0, 0, 165, 194, 0, 0, 137, 195, 147, 7, 131, 62, 4, 73, 239, 60, 0, 0, 114, 194, 0, 128, 142, 195, 227, 90, 164, 62, 63, 232, 40, 60, 102, 102, 100, 194, 0, 128, 142, 195, 93, 129, 169, 62, 63, 232, 40, 60, 152, 153, 7, 194, 0, 128, 145, 195, 6, 166, 204, 62, 0, 0, 0, 0, 204, 204, 16, 66, 0, 128, 145, 195, 242, 106, 27, 63, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 86, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 7, 0, 7, 0, 8, 0, 9, 0, 9, 0, 10, 0, 11, 0, 11, 0, 12, 0, 13, 0, 13, 0, 14, 0, 15, 0, 15, 0, 16, 0, 17, 0, 17, 0, 18, 0, 19, 0, 19, 0, 20, 0, 21, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 28, 0, 29, 0, 30, 0, 31, 0, 32, 0, 33, 0, 33, 0, 34, 0, 35, 0, 35, 0, 36, 0, 37, 0, 37, 0, 38, 0, 39, 0, 39, 0, 40, 0, 41, 0, 41, 0, 42, 0, 43, 0, 43, 0, 44, 0, 45, 0, 45, 0, 46, 0, 47, 0, 47, 0, 48, 0, 49, 0, 49, 0, 50, 0, 51, 0, 53, 0, 54, 0, 55, 0, 58, 0, 59, 0, 60, 0, 60, 0, 61, 0, 62, 0, 62, 0, 63, 0, 64, 0, 64, 0, 65, 0, 66, 0, 66, 0, 67, 0, 68, 0, 68, 0, 69, 0, 70, 0, 70, 0, 71, 0, 72, 0, 72, 0, 73, 0, 74, 0, 74, 0, 75, 0, 76, 0, 76, 0, 77, 0, 78, 0, 78, 0, 79, 0, 80, 0, 80, 0, 81, 0, 82, 0, 82, 0, 83, 0, 84, 0, 84, 0, 85, 0, 86, 0, 86, 0, 1, 0, 3, 0, 3, 0, 5, 0, 7, 0, 7, 0, 9, 0, 11, 0, 11, 0, 13, 0, 15, 0, 15, 0, 17, 0, 19, 0, 19, 0, 21, 0, 23, 0, 23, 0, 25, 0, 26, 0, 28, 0, 30, 0, 31, 0, 31, 0, 33, 0, 35, 0, 35, 0, 37, 0, 39, 0, 39, 0, 41, 0, 43, 0, 43, 0, 45, 0, 47, 0, 47, 0, 49, 0, 51, 0, 53, 0, 55, 0, 56, 0, 58, 0, 60, 0, 62, 0, 62, 0, 64, 0, 66, 0, 66, 0, 68, 0, 70, 0, 70, 0, 72, 0, 74, 0, 74, 0, 76, 0, 78, 0, 78, 0, 80, 0, 82, 0, 82, 0, 84, 0, 86, 0, 86, 0, 3, 0, 7, 0, 7, 0, 11, 0, 15, 0, 15, 0, 19, 0, 23, 0, 31, 0, 35, 0, 39, 0, 39, 0, 43, 0, 47, 0, 47, 0, 51, 0, 52, 0, 52, 0, 53, 0, 56, 0, 58, 0, 62, 0, 66, 0, 66, 0, 70, 0, 74, 0, 74, 0, 78, 0, 82, 0, 82, 0, 86, 0, 7, 0, 7, 0, 15, 0, 23, 0, 28, 0, 31, 0, 39, 0, 39, 0, 47, 0, 52, 0, 58, 0, 66, 0, 74, 0, 74, 0, 82, 0, 7, 0, 7, 0, 23, 0, 26, 0, 28, 0, 39, 0, 52, 0, 58, 0, 74, 0, 7, 0, 26, 0, 28, 0, 52, 0, 57, 0, 58, 0, 7, 0, 7, 0, 26, 0, 52, 0, 56, 0, 57, 0, 7, 0, 7, 0, 52, 0, 56, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 255,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 87
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 169.0
height = 0.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.945848, 0.99278, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )
width = 540
height = 540
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.55, 0.55 )

[sub_resource type="CircleShape2D" id=10]
radius = 55.0364

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 113, 296 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 324, 106.5 )

[node name="Observando Redi" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.68, 0.630133, 0.544, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frasco2" type="Node2D" parent="."]
modulate = Color( 0.0235294, 0.121569, 0.117647, 0.152941 )
light_mask = 512
position = Vector2( 0, -2 )

[node name="Base" type="MeshInstance2D" parent="Frasco2"]
use_parent_material = true
position = Vector2( 515, 409 )
mesh = SubResource( 1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Aberto" type="MeshInstance2D" parent="Frasco2"]
visible = false
use_parent_material = true
position = Vector2( 515, 216 )
mesh = SubResource( 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gaze" type="MeshInstance2D" parent="Frasco2"]
visible = false
use_parent_material = true
position = Vector2( 515, 216 )
mesh = SubResource( 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rolha" type="MeshInstance2D" parent="Frasco2"]
visible = false
use_parent_material = true
position = Vector2( 515, 216 )
mesh = SubResource( 4 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frasco" type="Node2D" parent="."]
light_mask = 512

[node name="Base" type="MeshInstance2D" parent="Frasco"]
light_mask = 512
use_parent_material = true
position = Vector2( 515, 409 )
mesh = SubResource( 1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Aberto" type="MeshInstance2D" parent="Frasco"]
visible = false
light_mask = 512
use_parent_material = true
position = Vector2( 515, 216 )
mesh = SubResource( 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gaze" type="MeshInstance2D" parent="Frasco"]
visible = false
light_mask = 512
use_parent_material = true
position = Vector2( 515, 216 )
mesh = SubResource( 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rolha" type="MeshInstance2D" parent="Frasco"]
visible = false
light_mask = 512
use_parent_material = true
position = Vector2( 515, 216 )
mesh = SubResource( 4 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoscaCarne" type="Sprite" parent="."]
light_mask = 512
position = Vector2( 499, 453 )
scale = Vector2( 0.431287, 0.431287 )
texture = ExtResource( 2 )

[node name="DetectarMoscaCarne" type="Area2D" parent="."]
position = Vector2( 495, 468 )
scale = Vector2( 0.490497, 0.490497 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectarMoscaCarne"]
position = Vector2( 10.1938, -43.8329 )
shape = SubResource( 11 )

[node name="MoscaGaze" type="Sprite" parent="."]
light_mask = 512
position = Vector2( 514, 177 )
scale = Vector2( 0.490497, 0.490497 )
texture = ExtResource( 2 )

[node name="DetectarMoscaGaze" type="Area2D" parent="."]
position = Vector2( 514, 177 )
scale = Vector2( 0.490497, 0.490497 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectarMoscaGaze"]
position = Vector2( -1.01953, -22.4263 )
shape = SubResource( 11 )

[node name="lupa" type="KinematicBody2D" parent="."]
position = Vector2( 340, 426 )
scale = Vector2( 0.8, 0.8 )

[node name="Lupão" type="MeshInstance2D" parent="lupa"]
position = Vector2( -27, -53 )
rotation = -0.530289
mesh = SubResource( 12 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lupa"]
position = Vector2( -90, -157 )
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="lupa"]
position = Vector2( -95, -164 )
texture = SubResource( 7 )
texture_scale = 4.0
mode = 3
range_item_cull_mask = 512
shadow_enabled = true
shadow_item_cull_mask = 512
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="lupa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lupa/Area2D"]
position = Vector2( -89, -158 )
shape = SubResource( 10 )

[node name="limite lupa" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="limite lupa"]
position = Vector2( 14, 301 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="limite lupa"]
position = Vector2( 1011, 305 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="limite lupa"]
position = Vector2( 504, -109 )
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="limite lupa"]
position = Vector2( 508, 666 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = 22.0
margin_top = 24.0
margin_right = 541.0
margin_bottom = 63.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 200, 0 )
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.176471, 0.12549, 0.0980392, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Não tem moscas na tampa!"
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 22.0
margin_top = 76.0
margin_right = 541.0
margin_bottom = 115.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 200, 0 )
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.176471, 0.12549, 0.0980392, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 9 )
text = "Não tem  moscas na tampa!"
valign = 1

[connection signal="area_entered" from="DetectarMoscaCarne" to="." method="_on_DetectarMoscaCarne"]
[connection signal="area_entered" from="DetectarMoscaGaze" to="." method="_on_DetectarMoscaGaze"]
